SERVER-27078 fix race in ShardRegistry initialization